# GUI-Easy

./: .gitignore  .testVim.c.swp  CMakeLists.txt  Doxyfile  Makefile  ProjetTechnoL3.cbp  README.md  cmake_install.cmake  q
include/: ei_application.h  ei_button_radio.h  ei_check_box.h  ei_draw.h  ei_entry.h  ei_eventmanager.h  ei_geometrymanager.h  ei_internals_calbacks.h  ei_main.h  ei_types.h  ei_widget.h  hw_interface.h
pages/: README.md  algo.md
src/: ei_application.cpp  ei_button.cpp  ei_button_radio.cpp  ei_check_box.cpp  ei_draw.cpp  ei_entry.cpp  ei_eventmanager.cpp  ei_frame.cpp  ei_geometry_manager.cpp  ei_internals_calbacks.cpp  ei_toplevel.cpp  ei_widget.cpp
test_units/: application_test.cpp  application_test.h  entry_test.cpp  entry_test.h  event_manager_test.cpp  event_manager_test.h  internals_calback_test.cpp  internals_calback_test.h  placer_test.cpp  placer_test.h  toplevel_test.cpp  toplevel_test.h  widget_test.cpp  widget_test.h
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  button.cpp  cmake_install.cmake  demo.cpp  frame.cpp  test_bah  test_bah.cpp  test_button_sample  test_button_sample.cpp  test_draw_recursivite.cpp  test_frame_img  test_frame_img.cpp  test_frame_text  test_frame_text.cpp  toplevel.cpp  unit_tests.cpp
